--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,10 +11,11 @@ lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.0"
 composeBom = "2025.11.01"
 navigation = "2.9.6"
-retrofit = "2.11.0"
-okhttp = "4.12.0"
-kotlinxSerializationJson = "1.7.3"
+retrofit = "3.0.0"
+okhttp = "5.3.2"
+kotlinxSerializationJson = "1.9.0"
 codeScanner = "16.1.0"
+hiltNavigationCompose = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +41,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 code-scanner = {group = "com.google.android.gms", name = "play-services-code-scanner", version.ref = "codeScanner"}
+hilt-navigation-compose = {group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
